--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
+    "nodemon": "^3.0.1",
     "parser": "^0.1.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
